text-alignment fixed

--- a/style.css
+++ b/style.css
@@ -489,6 +489,9 @@ ul li {
   #hero h1 {
     font-size: 1.5rem;
   }
+  #hero p{
+    text-align: left;
+  }
 
   #hero .typed {
     font-size: 1.2rem;
